tests/ui/resolve/suggest-import-before-outer-attrs-issue-69733.rs
//@ edition:2015
//@ run-rustfix
//@ compile-flags: -Adead_code

#[derive(Debug)]
struct Symbol;

type Ident = Path;
//~^ ERROR cannot find type `Path` in this scope

fn main() {}
